# bgc_data_portal

./: .dockerignore  .gitignore  .release-please-config.json  BRANCH_NOTES.md  CANVAS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  bgcs_db.DEV.sqlite  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  skaffold.yaml  workspace.patch
.github/workflows/: release.yml
api/: aggregate_bgcs.py  api.py  filters.py  forms.py  generate_outputs.py  models.py  pfam_annots.py  schemas.py  services.py  utils.py  views.py
api/migrations/: 0001_initial.py
bgc_data_portal/: __init__.py  context_processors.py  forms.py  settings.py  urls.py  views.py
bgc_data_portal/templates/: .results_page2.html  404.html  about.html  base.html  bgc_page.html  explore_page.html  explore_table.html  landing_page.html  metadata_search.html  metadata_table.html  results_page.html
bgc_plots/: class_distribution_plots.py  contig_region_visualisation.py
db/: Dockerfile
deployments/k8s-dev/: ebi-wp-k8s-hl.yaml
deployments/k8s-local/: .env.local.example  kind-cluster.yaml
deployments/k8s-prod/: ebi-wp-k8s-hl.yaml
django/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.worker  Dockerfile.worker.dev  Dockerfile.workspace  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements-ml.txt  requirements-web.txt  requirements-worker.txt  requirements.txt  setup.py
django/bgc_data_portal/: __init__.py  asgi.py  celery.py  forms.py  (+5 more)
docs/: _quarto.yml  about.qmd  api-documentation.qmd  api.qmd  discovery-data-spec.md  discovery-platform.md  getting-started.qmd  index.qmd  usage.qmd
k8s/: Dockerfile  ebi-wp-k8s-hl.yaml
scripts/: workspace.sh
test/: README.md
(+407 files in other folders)
